# BP-road-sign-detection

./: .gitignore  README.md
src/predic/: ABoostDetection.cpp  ABoostDetection.h  CMakeLists.txt  Classification.cpp  Classification.h  FileOperation.cpp  FileOperation.h  ProgramOption.cpp  ProgramOption.h  extractor.cpp  extractor.h  libSVM.h  lutTable.h  main.cpp
src/train/: CMakeLists.txt  Extractor.cpp  Extractor.h  ProgramOption.cpp  ProgramOption.h  TrainSVM.cpp  TrainSVM.h  TrainWaldBoost.cpp  TrainWaldBoost.h  main.cpp
tool/: genNeg.py  get_name_files.sh
